--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
 
+
 body{
     margin: 0 auto;
     font-family: 'Bitter', serif;
@@ -191,9 +192,16 @@ body{
 
 }
 
-#bar3 .pre_bar{
+.alt_cont3 .pre_bar{
 
-    margin-top: 120px; 
+    margin-top: 90px; 
+
+}
+
+
+.alt_cont4 .pre_bar{
+
+    margin-top: 220px; 
 
 }
 
@@ -222,7 +230,15 @@ body{
 #fake_bar3{
     margin: 0 auto;
     width: 10px;
-    height: 112px;
+    height: 210px;
+    background-color: #001c4c;
+}
+
+
+#fake_bar4{
+    margin: 0 auto;
+    width: 10px;
+    height: 100px;
     background-color: #001c4c;
 }
 
