--- a/css/styles.css
+++ b/css/styles.css
@@ -121,10 +121,13 @@ body{
    
     background-color: #cdcdcd;
     padding: 5px 0;
-    margin: 0;
+    margin-bottom: 10px;
     font-size: .7rem;
     text-transform: uppercase;  
     cursor: pointer;
+    color:#5a5a5c;
+    border-radius: 5px;
+    box-shadow: 5px 5px 14px 0px rgba(0,0,0,0.75);
 }
 
 
@@ -136,7 +139,15 @@ body{
 
 .lv_op p{
     margin-bottom: 0;
+    
+
 }
+
+.lv_op p:hover{
+    text-decoration: underline;    
+
+}
+
 
 
 .alt_cont2 p:first-of-type{
@@ -230,7 +241,7 @@ body{
 #fake_bar3{
     margin: 0 auto;
     width: 10px;
-    height: 210px;
+    height: 180px;
     background-color: #001c4c;
 }
 
@@ -238,7 +249,7 @@ body{
 #fake_bar4{
     margin: 0 auto;
     width: 10px;
-    height: 100px;
+    height: 90px;
     background-color: #001c4c;
 }
 
